# smolvm-desktop

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  types.rs
src-tauri/src/commands/: config.rs  exec.rs  files.rs  images.rs  logs.rs  machines.rs  mod.rs  pack.rs  smolfile.rs  stats.rs  supervisor.rs  system.rs  tasks.rs
src-tauri/src/smolvm/: cli.rs  mod.rs  parser.rs  smolfile_gen.rs
src-tauri/src/types/: common.rs  machine.rs  mod.rs  pack.rs  system.rs
src/components/images/: ImagesView.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/components/machines/: EditMachineDialog.tsx  MachineDetail.tsx  MachineList.tsx  NewMachineDialog.tsx  NewMachinePage.tsx  RestartHealthEditor.tsx
src/components/packs/: PacksView.tsx
src/components/settings/: RegistriesEditor.tsx  SettingsView.tsx
src/components/shared/: Badge.tsx  ErrorModal.tsx  JsonTree.tsx  Placeholder.tsx  Sparkline.tsx  Tabs.tsx  Toaster.tsx
src/components/stats/: SystemDashboard.tsx
src/components/volumes/: VolumesView.tsx
src/hooks/: useErrorModal.ts  useHealth.ts  useMachineDetailTab.ts  useMachines.ts  useNewMachineDialog.ts  useShortcuts.ts  useToasts.ts
src/lib/: invoke.ts  paths.ts  registries-toml.test.ts  registries-toml.ts  types.ts
src/lib/api/: image.ts  index.ts  machine.ts  pack.ts  (+2 more)
(+14 files in other folders)
