[package]
name = "smolvm-desktop"
version = "0.1.0"
description = "SmolVM Desktop — local VM management UI"
authors = ["Bradley Hilton"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "smolvm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "sync", "time"] }
thiserror = "2"
anyhow = "1"
portable-pty = "0.8"
sysinfo = "0.33"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
